# soc-toolkit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml.bak  docker-compose.yml  package-lock.json  package.json  reverse-proxy.conf
.github/: dependabot.yml  pull_request_template.md
backend/: Dockerfile  cli.py  config.py  pyproject.toml
backend/api/: app.py
backend/api/middleware/: error_handler.py  rate_limiter.py
backend/api/routes/: ioc.py  logs.py  phishing.py  reports.py  sigma.py
backend/cache/: db.py
backend/core/ioc/: email_extractor.py  ioc_validator.py  text_extractor.py
backend/core/logs/: alert_engine.py  ssh_analyzer.py  web_analyzer.py  windows_analyzer.py
backend/core/misp/: __init__.py  enricher.py
backend/core/phishing/: attachment_scanner.py  header_analyzer.py  url_checker.py
backend/core/sigma/: __init__.py
backend/core/yara/: __init__.py
backend/export/: json_export.py  pdf_export.py
backend/integrations/: abuseipdb.py  alienvault_otx.py  base_client.py  shodan_client.py  urlscan.py  virustotal.py
backend/rules/sigma/: ssh_bruteforce.yml  web_webshell_access.yml  windows_new_admin_account.yml
backend/rules/yara/: office_macros.yar  ransomware.yar
docs/: API.md  ARCHITECTURE.md  SETUP.md  regenerating-screenshots.md
e2e/: README.md  package.json  playwright.config.ts
examples/: README.md
frontend/: package.json
scripts/: seed-demo.sh
tests/: test_ioc.py  test_logs.py  (+3 more)
(+22 files in other folders)
